# memorylayer

./: .env.example  .gitignore  CONTRIBUTING.md  CTO_REVIEW.md  NOTICE  README.md  SECURITY.md  railway.toml  requirements.txt
.github/workflows/: test.yml
api/: .env.example  .gitignore  README.md  example_usage.py  main.py  requirements.txt
api/api/: main.py
api/api/routes/: auth.py  memory.py  users.py
api/migrations/: add_account_id_to_memories.sql
api/rec0/: client.py  database.py  embeddings.py  keygen.py  keyvault.py  models.py  ratelimit.py  schemas.py  summaries.py
api/tests/: test_auth.py  test_health.py  test_memory_delete.py  test_memory_recall.py  test_memory_store.py  test_models.py  test_sdk.py  test_tenant_isolation.py
sdk/: .env.example  README.md  pyproject.toml  test_sdk.py
sdk/rec0/: __init__.py  async_client.py  client.py  exceptions.py  models.py  version.py
sdk/tests/: __init__.py  test_client.py  test_integration.py
website/: index.html  package-lock.json  package.json
website/src/: App.css  App.jsx  index.css
website/src/components/: Auth.module.css  Benchmark.jsx  Benchmark.module.css  BuiltInPublic.jsx  BuiltInPublic.module.css  CTA.jsx  CTA.module.css  CodeSection.jsx  CodeSection.module.css  Compare.jsx  Compare.module.css  Dashboard.jsx  Dashboard.module.css  FadeIn.jsx  Features.jsx  Features.module.css  Footer.jsx  Footer.module.css  Hero.jsx  Hero.module.css  HowItWorks.jsx  HowItWorks.module.css  LiveProof.jsx  LiveProof.module.css  Login.jsx  Login.module.css  Modal.jsx  Modal.module.css  Nav.jsx  Nav.module.css  (+12 more)
(+3 files in other folders)
