[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorylayer-py"
version = "0.1.0"
description = "Privacy-first memory API for LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "rec0.ai", email = "hello@rec0.ai" }]
keywords = ["llm", "memory", "ai", "privacy", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.28.0", "httpx>=0.24.0"]

[project.urls]
Homepage = "https://rec0.ai"
Documentation = "https://docs.rec0.ai"
Repository = "https://github.com/rec0ai/rec0-python"
"Bug Tracker" = "https://github.com/rec0ai/rec0-python/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.25.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rec0*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
